# qt-dev

./: CMakeLists.txt  resources.qrc
src/: main.cpp
